# data-set

./: .gitignore  LICENSE  README.md  data-set.cabal
benchmarks/: Benchmarks.hs
src/Data/: Diet.hs
src/Data/Set/: Diet.hs  SetInterface.hs  WordBitSet.hs
tests/: Tests.hs
tests/Data/Set/: Interface.hs
