Name:                 data-set
Version:              0.0.1
Synopsis:             A few more implementations of set ADT.
Description:
  Data.Set.Diet provides Discrete Interval Encoding Tree implementation.
  Look at http://web.engr.oregonstate.edu/~erwig/diet/ for reference.
Category:             Data Structures
License:              MIT
License-file:         LICENSE
Data-files:           CHANGES
Author:               Anton Dubovik <anton.dubovik@gmail.com>
Maintainer:           anton.dubovik@gmail.com
Stability:            Experimental
Cabal-Version:        >= 1.16
Build-type:           Simple
Tested-with:          GHC >= 7.4.1

Flag BitSet
  Description: Enable `bitset` package dependency
  Default:     False

Library
  Hs-source-dirs:     src
  Ghc-options:        -Wall -fno-warn-orphans
  Default-language:   Haskell2010

  Build-depends:      base
                    , deepseq
                    , containers

  Exposed-modules:    Data.Set.Diet
                    , Data.Set.WordBitSet

Test-suite data-set-tests
  Hs-source-dirs:     tests
  Ghc-options:        -Wall -Werror -O2
  Default-language:   Haskell2010

  Type:               exitcode-stdio-1.0
  Main-is:            Tests.hs
  Other-modules:      Data.Set.Interface

  Build-depends:      base
                    , QuickCheck
                    , test-framework
                    , test-framework-quickcheck2                    
                    , containers
                    , data-set

  if flag(BitSet)
     Build-depends: bitset >= 1.4.7
     cpp-options: -DBITSET

Benchmark data-set-benchmarks
  Hs-source-dirs:     benchmarks, tests
  Ghc-options:        -Wall -Werror -O2
  Default-language:   Haskell2010

  Type:               exitcode-stdio-1.0
  Main-is:            Benchmarks.hs
  Other-modules:      Data.Set.Interface

  Build-depends:      base
                    , deepseq
                    , criterion
                    , containers
                    , random
                    , random-shuffle
                    , containers
                    , data-set

  if flag(BitSet)
     Build-depends: bitset >= 1.4.7
     cpp-options: -DBITSET
